// WashCo Database Schema - Single Source of Truth
// Generated from PostgreSQL 16 + PostGIS actual schema
// Extensions: postgis, pg_trgm
// All monetary values stored as BIGINT (minor units, e.g. 50000 = 50,000 VND)
// All IDs are UUID v7 (time-sortable)
// Multi-tenant: every tenant-scoped table has tenant_id FK

Project WashCo {
  database_type: 'PostgreSQL'
  Note: '''
    # WashCo - He thong quan ly tiem rua xe
    Multi-tenant SaaS for car wash management.
    Modules: Identity, Location, Catalog, Queue, Booking,
             Review, Notification, Pricing, Promotion, Analytics, Upload
  '''
}

// ============================================================
// IDENTITY MODULE
// ============================================================

Table tenants {
  id            uuid      [pk, note: 'UUID v7']
  business_name text      [not null]
  owner_name    text      [not null]
  created_at    timestamptz [not null, default: `now()`]
  updated_at    timestamptz [not null, default: `now()`]

  Note: 'Root tenant entity. Every business is a tenant. All scoped tables reference this.'
}

Table users {
  id          uuid        [pk, note: 'UUID v7']
  tenant_id   uuid        [not null, ref: > tenants.id]
  phone       text        [not null]
  name        text        [not null]
  role        text        [not null, default: 'owner', note: 'owner | staff | driver']
  is_verified boolean     [not null, default: false]
  created_at  timestamptz [not null, default: `now()`]
  updated_at  timestamptz [not null, default: `now()`]
  deleted_at  timestamptz [note: 'Soft delete']

  indexes {
    phone [unique, name: 'idx_users_phone', note: 'WHERE deleted_at IS NULL']
    tenant_id [name: 'idx_users_tenant', note: 'WHERE deleted_at IS NULL']
  }

  Note: 'Authenticated users. Phone-based auth with OTP. Soft-deletable.'
}

// ============================================================
// LOCATION MODULE
// ============================================================

Table locations {
  id            uuid          [pk, note: 'UUID v7']
  tenant_id     uuid          [not null, ref: > tenants.id]
  name          text          [not null]
  slug          text          [not null, note: 'Auto-generated from name']
  phone         text
  address       text          [not null]
  district      text          [not null]
  city          text          [not null]
  coordinates   geography     [not null, note: 'PostGIS POINT(lng, lat) SRID 4326']
  bay_count     smallint      [not null, default: 1]
  queue_mode    text          [not null, default: 'hybrid', note: 'booking_only | walkin_only | hybrid']
  status        text          [not null, default: 'pending', note: 'pending | active | suspended']
  amenities     jsonb         [not null, default: '[]']
  custom_fields jsonb         [not null, default: '{}']
  image_url     text          [note: 'S3/RustFS object URL']
  created_at    timestamptz   [not null, default: `now()`]
  updated_at    timestamptz   [not null, default: `now()`]
  deleted_at    timestamptz   [note: 'Soft delete']

  indexes {
    (tenant_id, slug) [unique, name: 'idx_locations_tenant_slug', note: 'WHERE deleted_at IS NULL']
    coordinates [type: gist, name: 'idx_locations_geo', note: 'WHERE deleted_at IS NULL AND status = active']
    (city, district) [name: 'idx_locations_city_district', note: 'WHERE deleted_at IS NULL AND status = active']
  }

  Note: 'Physical wash locations. Geo-indexed for nearby search. Soft-deletable.'
}

Table operating_hours {
  id          uuid    [pk, note: 'UUID v7']
  location_id uuid   [not null, ref: > locations.id]
  day_of_week smallint [not null, note: '0=Sunday .. 6=Saturday']
  open_time   time    [not null]
  close_time  time    [not null]
  is_closed   boolean [not null, default: false]

  indexes {
    (location_id, day_of_week) [unique]
  }

  Note: 'Weekly operating schedule per location. CHECK: day_of_week BETWEEN 0 AND 6.'
}

Table bays {
  id          uuid        [pk, note: 'UUID v7']
  location_id uuid        [not null, ref: > locations.id]
  tenant_id   uuid        [not null, ref: > tenants.id]
  name        text        [not null]
  is_active   boolean     [not null, default: true]
  created_at  timestamptz [not null, default: `now()`]

  indexes {
    location_id [name: 'idx_bays_location', note: 'WHERE is_active = true']
  }

  Note: 'Wash bays within a location. Used for queue assignment.'
}

// ============================================================
// CATALOG MODULE
// ============================================================

Table services {
  id               uuid        [pk, note: 'UUID v7']
  tenant_id        uuid        [not null, ref: > tenants.id]
  location_id      uuid        [not null, ref: > locations.id]
  name             text        [not null]
  description      text
  vehicle_type     text        [not null, note: 'motorbike | sedan | suv | truck | van']
  base_price       bigint      [not null, note: 'VND minor units']
  duration_minutes integer     [not null]
  is_active        boolean     [not null, default: true]
  sort_order       integer     [not null, default: 0]
  created_at       timestamptz [not null, default: `now()`]
  updated_at       timestamptz [not null, default: `now()`]
  deleted_at       timestamptz [note: 'Soft delete']

  indexes {
    (tenant_id, location_id) [name: 'idx_services_location', note: 'WHERE deleted_at IS NULL AND is_active = true']
  }

  Note: 'Wash services offered at each location. Price in VND minor units (BIGINT).'
}

// ============================================================
// QUEUE MODULE
// ============================================================

Table queue_entries {
  id             uuid        [pk, note: 'UUID v7']
  tenant_id      uuid        [not null, ref: > tenants.id]
  location_id    uuid        [not null, ref: > locations.id]
  queue_number   integer     [not null]
  customer_name  text        [not null]
  customer_phone text
  vehicle_type   text        [not null, note: 'motorbike | sedan | suv | truck | van']
  service_id     uuid        [not null, ref: > services.id]
  service_name   text        [not null, note: 'Denormalized for display']
  bay_id         uuid        [ref: > bays.id]
  status         text        [not null, default: 'waiting', note: 'waiting | in_progress | completed | cancelled']
  joined_at      timestamptz [not null, default: `now()`]
  started_at     timestamptz
  completed_at   timestamptz

  indexes {
    (tenant_id, location_id, status) [name: 'idx_queue_active', note: 'WHERE status IN (waiting, in_progress)']
    (location_id, joined_at) [name: 'idx_queue_daily']
  }

  Note: 'Walk-in queue entries. Tracks customer through waiting -> in_progress -> completed lifecycle.'
}

// ============================================================
// BOOKING MODULE
// ============================================================

Table bookings {
  id             uuid        [pk, note: 'UUID v7']
  tenant_id      uuid        [not null, ref: > tenants.id]
  location_id    uuid        [not null, ref: > locations.id]
  service_id     uuid        [not null, ref: > services.id]
  customer_name  text        [not null]
  customer_phone text        [not null]
  vehicle_type   text        [not null, note: 'motorbike | sedan | suv | truck | van']
  booking_date   date        [not null]
  time_slot      time        [not null]
  status         text        [not null, default: 'pending', note: 'pending | confirmed | in_progress | completed | cancelled | no_show']
  notes          text
  created_at     timestamptz [not null, default: `now()`]
  updated_at     timestamptz [not null, default: `now()`]
  cancelled_at   timestamptz

  indexes {
    (tenant_id, location_id, booking_date, time_slot) [name: 'idx_bookings_location_date', note: 'WHERE status IN (pending, confirmed)']
    (customer_phone, booking_date) [name: 'idx_bookings_phone']
  }

  Note: 'Advance bookings. State machine: pending -> confirmed -> in_progress -> completed. Also: cancelled, no_show.'
}

// ============================================================
// REVIEW MODULE
// ============================================================

Table reviews {
  id             uuid        [pk, note: 'UUID v7']
  tenant_id      uuid        [not null, ref: > tenants.id]
  location_id    uuid        [not null, ref: > locations.id]
  queue_entry_id uuid        [ref: > queue_entries.id, note: 'Optional link to queue entry']
  customer_name  text        [not null]
  customer_phone text
  rating         smallint    [not null, note: 'CHECK: 1-5 stars']
  comment        text
  reply          text        [note: 'Owner reply']
  replied_at     timestamptz
  created_at     timestamptz [not null, default: `now()`]

  indexes {
    (tenant_id, location_id, created_at) [name: 'idx_reviews_location', note: 'DESC on created_at']
    (location_id, rating) [name: 'idx_reviews_rating']
  }

  Note: 'Customer reviews with 1-5 star rating. Owners can reply. Optionally linked to a queue entry.'
}

// ============================================================
// NOTIFICATION MODULE
// ============================================================

Table notification_templates {
  id            uuid        [pk, note: 'UUID v7']
  tenant_id     uuid        [not null, ref: > tenants.id]
  template_type text        [not null, note: 'welcome | booking_confirmed | queue_ready | etc.']
  channel       text        [not null, default: 'sms', note: 'sms | push']
  subject       text
  body_template text        [not null, note: 'Handlebars-style: Hello {{name}}!']
  is_active     boolean     [not null, default: true]
  created_at    timestamptz [not null, default: `now()`]

  indexes {
    (tenant_id, template_type, channel) [unique]
  }

  Note: 'Reusable notification templates per tenant. Unique per (tenant, type, channel).'
}

Table notifications {
  id              uuid        [pk, note: 'UUID v7']
  tenant_id       uuid        [not null, ref: > tenants.id]
  recipient_phone text        [not null]
  channel         text        [not null, default: 'sms', note: 'sms | push']
  template_type   text        [not null]
  payload         jsonb       [not null, default: '{}', note: 'Template variables']
  rendered_body   text        [note: 'Filled template text']
  status          text        [not null, default: 'pending', note: 'pending | sent | failed']
  sent_at         timestamptz
  error           text
  created_at      timestamptz [not null, default: `now()`]

  indexes {
    created_at [name: 'idx_notifications_pending', note: 'WHERE status = pending']
    (tenant_id, created_at) [name: 'idx_notifications_tenant', note: 'DESC on created_at']
  }

  Note: 'Notification log. Outbox processor polls pending notifications and sends via SMS/push.'
}

// ============================================================
// PRICING MODULE
// ============================================================

Table pricing_rules {
  id               uuid        [pk, note: 'UUID v7']
  tenant_id        uuid        [not null, ref: > tenants.id]
  location_id      uuid        [not null, ref: > locations.id]
  service_id       uuid        [ref: > services.id, note: 'NULL = applies to all services']
  name             text        [not null]
  rule_type        text        [not null, note: 'surge | time_based | day_of_week | demand']
  multiplier       float8      [not null, default: 1.0, note: '1.5 = +50% surcharge']
  fixed_adjustment bigint      [not null, default: 0, note: 'VND added/subtracted']
  conditions       jsonb       [not null, default: '{}', note: 'e.g. {start_hour: 17, end_hour: 21}']
  priority         integer     [not null, default: 0, note: 'Higher = applied first']
  is_active        boolean     [not null, default: true]
  valid_from       timestamptz [note: 'NULL = always valid']
  valid_to         timestamptz [note: 'NULL = no expiry']
  created_at       timestamptz [not null, default: `now()`]
  updated_at       timestamptz [not null, default: `now()`]

  indexes {
    (tenant_id, location_id) [name: 'idx_pricing_rules_location', note: 'WHERE is_active = true']
  }

  Note: 'Dynamic pricing rules. Applied via multiplier and/or fixed adjustment to base_price.'
}

// ============================================================
// PROMOTION MODULE
// ============================================================

Table promotions {
  id             uuid        [pk, note: 'UUID v7']
  tenant_id      uuid        [not null, ref: > tenants.id]
  code           text        [not null, note: 'Promo code, e.g. SALE20']
  name           text        [not null]
  description    text
  discount_type  text        [not null, note: 'percentage | fixed']
  discount_value bigint      [not null, note: 'percentage: 20 = 20%. fixed: 10000 = 10,000 VND off']
  min_order      bigint      [not null, default: 0, note: 'Minimum order amount in VND']
  max_uses       integer     [note: 'NULL = unlimited']
  used_count     integer     [not null, default: 0]
  valid_from     timestamptz [not null]
  valid_to       timestamptz [not null]
  location_ids   "uuid[]"    [default: '{}', note: 'Empty = all locations']
  is_active      boolean     [not null, default: true]
  created_at     timestamptz [not null, default: `now()`]
  updated_at     timestamptz [not null, default: `now()`]

  indexes {
    (tenant_id, code) [unique, name: 'idx_promotions_code', note: 'WHERE is_active = true']
    (tenant_id, valid_from, valid_to) [name: 'idx_promotions_active', note: 'WHERE is_active = true']
  }

  Note: 'Discount promotions with codes. Supports percentage or fixed discount. Scoped to locations optionally.'
}

// ============================================================
// OUTBOX (Transactional Outbox Pattern)
// ============================================================

Table outbox_events {
  id           uuid        [pk, note: 'UUID v7']
  event_type   text        [not null, note: 'e.g. booking.confirmed, queue.completed']
  payload      jsonb       [not null]
  created_at   timestamptz [not null, default: `now()`]
  processed_at timestamptz [note: 'NULL = not yet processed']
  error        text        [note: 'Last error message if failed']
  retry_count  integer     [not null, default: 0, note: 'Max 5 retries']

  indexes {
    created_at [name: 'idx_outbox_pending', note: 'WHERE processed_at IS NULL']
  }

  Note: 'Transactional outbox for reliable event processing. Background worker polls every 5s.'
}

// ============================================================
// UPLOAD MODULE (S3/RustFS)
// ============================================================

Table uploaded_files {
  id           uuid        [pk, note: 'UUID v7']
  tenant_id    uuid        [not null, ref: > tenants.id]
  object_key   text        [not null, note: 'S3 path: {tenant_id}/{folder}/{uuid}.{ext}']
  filename     text        [not null, note: 'Original filename']
  content_type text        [not null, note: 'MIME type, e.g. image/jpeg']
  uploaded_by  uuid        [not null, ref: > users.id]
  created_at   timestamptz [not null, default: `now()`]

  indexes {
    tenant_id [name: 'idx_uploaded_files_tenant']
    object_key [name: 'idx_uploaded_files_key']
  }

  Note: 'Metadata for files uploaded via presigned S3 URLs. Actual files stored in RustFS/S3.'
}

// ============================================================
// ENUM REFERENCE (stored as TEXT in DB)
// ============================================================
// These are enforced at application layer, not DB ENUMs,
// for easier migration and flexibility.
//
// vehicle_type:    motorbike | sedan | suv | truck | van
// queue_mode:      booking_only | walkin_only | hybrid
// location_status: pending | active | suspended
// queue_status:    waiting | in_progress | completed | cancelled
// booking_status:  pending | confirmed | in_progress | completed | cancelled | no_show
// user_role:       owner | staff | driver
// discount_type:   percentage | fixed
// rule_type:       surge | time_based | day_of_week | demand
// notif_channel:   sms | push
// notif_status:    pending | sent | failed
